bnfc/REQ/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from REQ/Par.y
-----------------------------------------------------------------------------

state 11 contains 4 reduce/reduce conflicts.
state 24 contains 2 shift/reduce conflicts.
state 25 contains 1 shift/reduce conflicts.
state 27 contains 6 shift/reduce conflicts.
state 28 contains 4 shift/reduce conflicts.
state 29 contains 3 shift/reduce conflicts.
state 99 contains 2 reduce/reduce conflicts.
state 108 contains 1 shift/reduce conflicts.
state 118 contains 3 shift/reduce conflicts.
state 120 contains 3 shift/reduce conflicts.
state 127 contains 1 shift/reduce conflicts.
state 177 contains 1 shift/reduce conflicts.
state 178 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pThry -> Thry                               (0)
	%start_pTrm -> Trm                                 (1)
	%start_pTyp -> Typ                                 (2)
	%start_pSCond -> SCond                             (3)
	Integer -> L_integ                                 (4)
	DynVar -> L_DynVar                                 (5)
	Thry -> 'Theory' DynVar '.' ListDynVar '.' ListItem   (6)
	ListDynVar ->                                      (7)
	ListDynVar -> DynVar ListDynVar                    (8)
	Item -> 'ObsVars' ListDynVar '.'                   (9)
	Item -> 'ExprVars' ListDynVar '.'                  (10)
	Item -> 'PredVars' ListDynVar '.'                  (11)
	Item -> 'StaticVars' ListDynVar '.'                (12)
	Item -> 'DclVar' VClass DynVar '.' VarRole '.'     (13)
	Item -> 'DclDLVar' VClass DynVar '.' ListDynVar '.'   (14)
	Item -> 'DclASet' VClass DynVar '.'                (15)
	Item -> 'Law' LawType DynVar '.' Trm '.' SCond     (16)
	Item -> 'Conjecture' DynVar '.' Trm '.' SCond      (17)
	VarRole -> 'var' SBBL Typ                          (18)
	VClass -> 'Obs'                                    (19)
	VClass -> 'Exp'                                    (20)
	VClass -> 'Prd'                                    (21)
	SBBL -> 'NA'                                       (22)
	SBBL -> 'SB'                                       (23)
	SBBL -> 'NS'                                       (24)
	LawType -> 'axiom'                                 (25)
	LawType -> 'proven'                                (26)
	LawType -> 'assumed'                               (27)
	ListItem ->                                        (28)
	ListItem -> Item ListItem                          (29)
	Trm -> Trm '===' Trm1                              (30)
	Trm -> Trm1                                        (31)
	Trm1 -> Trm2 '==>' Trm1                            (32)
	Trm1 -> Trm2                                       (33)
	Trm2 -> Trm2 '\\/' Trm3                            (34)
	Trm2 -> Trm3                                       (35)
	Trm3 -> Trm3 '/\\' Trm4                            (36)
	Trm3 -> '~' Trm4                                   (37)
	Trm3 -> Trm4                                       (38)
	Trm4 -> Trm5 '==' Trm5                             (39)
	Trm4 -> Trm5 '!=' Trm5                             (40)
	Trm4 -> Trm5 '<' Trm5                              (41)
	Trm4 -> Trm5 '<=' Trm5                             (42)
	Trm4 -> Trm5 '>' Trm5                              (43)
	Trm4 -> Trm5 '>=' Trm5                             (44)
	Trm4 -> Trm5                                       (45)
	Trm5 -> Trm6 '++' Trm5                             (46)
	Trm5 -> Trm6 ':' Trm5                              (47)
	Trm5 -> Trm6                                       (48)
	Trm6 -> Trm6 '+' Trm7                              (49)
	Trm6 -> Trm6 '-' Trm7                              (50)
	Trm6 -> Trm7                                       (51)
	Trm7 -> Trm7 '*' Trm8                              (52)
	Trm7 -> Trm7 '/' Trm8                              (53)
	Trm7 -> Trm7 '%' Trm8                              (54)
	Trm7 -> '-' Trm8                                   (55)
	Trm7 -> Trm8                                       (56)
	Trm8 -> Integer                                    (57)
	Trm8 -> DynVar                                     (58)
	Trm8 -> 'True'                                     (59)
	Trm8 -> 'False'                                    (60)
	Trm8 -> DynVar '(' ListTrm ')'                     (61)
	Trm8 -> 'BndS' DynVar '[' ListGVar ']' Trm         (62)
	Trm8 -> 'BndL' DynVar '[' ListGVar ']' Trm         (63)
	Trm8 -> 'Close' DynVar Trm                         (64)
	Trm8 -> 'SubV' Trm '[.' ListTrm '//' ListDynVar '.]'   (65)
	Trm8 -> 'SubL' Trm '[.' ListDynVar '//' ListDynVar '.]'   (66)
	Trm8 -> 'Sub' Trm '[.' ListTrm '//' ListDynVar '|' ListDynVar '//' ListDynVar '.]'   (67)
	Trm8 -> 'Iter' DynVar DynVar '[' ListDynVar ']'    (68)
	Trm8 -> '(' Trm ')'                                (69)
	ListTrm ->                                         (70)
	ListTrm -> Trm                                     (71)
	ListTrm -> Trm ',' ListTrm                         (72)
	Typ -> Typ1 '->' Typ                               (73)
	Typ -> Typ1                                        (74)
	Typ1 -> DynVar '(:' ListTyp2 ':)'                  (75)
	Typ1 -> Typ2                                       (76)
	Typ2 -> DynVar ListTyp3                            (77)
	Typ2 -> Typ3                                       (78)
	Typ3 -> 'ttop'                                     (79)
	Typ3 -> DynVar                                     (80)
	Typ3 -> 'tbot'                                     (81)
	Typ3 -> '(' Typ ')'                                (82)
	ListTyp2 ->                                        (83)
	ListTyp2 -> Typ2                                   (84)
	ListTyp2 -> Typ2 '|' ListTyp2                      (85)
	ListTyp3 ->                                        (86)
	ListTyp3 -> Typ3 ListTyp3                          (87)
	GVar -> 'std' DynVar                               (88)
	GVar -> 'lst' DynVar                               (89)
	ListGVar ->                                        (90)
	ListGVar -> GVar                                   (91)
	ListGVar -> GVar ',' ListGVar                      (92)
	VrSet -> ListGVar                                  (93)
	VSCond -> GVar 'disj' VrSet                        (94)
	VSCond -> GVar 'covby' VrSet                       (95)
	VSCond -> GVar 'dcovby' VrSet                      (96)
	ListVSCond ->                                      (97)
	ListVSCond -> VSCond                               (98)
	ListVSCond -> VSCond ';' ListVSCond                (99)
	SCond -> 'SC' ListVSCond '.' VrSet '.'             (100)
	SCond -> 'VSC' ListVSCond '.'                      (101)
	SCond -> 'fresh' VrSet '.'                         (102)
	SCond -> 'none'                                    (103)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	'(:'           { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'.'            { PT _ (TS _ 12) }
	'.]'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	'//'           { PT _ (TS _ 15) }
	'/\\'          { PT _ (TS _ 16) }
	':'            { PT _ (TS _ 17) }
	':)'           { PT _ (TS _ 18) }
	';'            { PT _ (TS _ 19) }
	'<'            { PT _ (TS _ 20) }
	'<='           { PT _ (TS _ 21) }
	'=='           { PT _ (TS _ 22) }
	'==='          { PT _ (TS _ 23) }
	'==>'          { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'BndL'         { PT _ (TS _ 27) }
	'BndS'         { PT _ (TS _ 28) }
	'Close'        { PT _ (TS _ 29) }
	'Conjecture'   { PT _ (TS _ 30) }
	'DclASet'      { PT _ (TS _ 31) }
	'DclDLVar'     { PT _ (TS _ 32) }
	'DclVar'       { PT _ (TS _ 33) }
	'Exp'          { PT _ (TS _ 34) }
	'ExprVars'     { PT _ (TS _ 35) }
	'False'        { PT _ (TS _ 36) }
	'Iter'         { PT _ (TS _ 37) }
	'Law'          { PT _ (TS _ 38) }
	'NA'           { PT _ (TS _ 39) }
	'NS'           { PT _ (TS _ 40) }
	'Obs'          { PT _ (TS _ 41) }
	'ObsVars'      { PT _ (TS _ 42) }
	'Prd'          { PT _ (TS _ 43) }
	'PredVars'     { PT _ (TS _ 44) }
	'SB'           { PT _ (TS _ 45) }
	'SC'           { PT _ (TS _ 46) }
	'StaticVars'   { PT _ (TS _ 47) }
	'Sub'          { PT _ (TS _ 48) }
	'SubL'         { PT _ (TS _ 49) }
	'SubV'         { PT _ (TS _ 50) }
	'Theory'       { PT _ (TS _ 51) }
	'True'         { PT _ (TS _ 52) }
	'VSC'          { PT _ (TS _ 53) }
	'['            { PT _ (TS _ 54) }
	'[.'           { PT _ (TS _ 55) }
	'\\/'          { PT _ (TS _ 56) }
	']'            { PT _ (TS _ 57) }
	'assumed'      { PT _ (TS _ 58) }
	'axiom'        { PT _ (TS _ 59) }
	'covby'        { PT _ (TS _ 60) }
	'dcovby'       { PT _ (TS _ 61) }
	'disj'         { PT _ (TS _ 62) }
	'fresh'        { PT _ (TS _ 63) }
	'lst'          { PT _ (TS _ 64) }
	'none'         { PT _ (TS _ 65) }
	'proven'       { PT _ (TS _ 66) }
	'std'          { PT _ (TS _ 67) }
	'tbot'         { PT _ (TS _ 68) }
	'ttop'         { PT _ (TS _ 69) }
	'var'          { PT _ (TS _ 70) }
	'|'            { PT _ (TS _ 71) }
	'~'            { PT _ (TS _ 72) }
	L_integ        { PT _ (TI $$) }
	L_DynVar       { PT _ (T_DynVar $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pThry    rule  0
	%start_pTrm     rule  1
	%start_pTyp     rule  2
	%start_pSCond   rule  3
	Integer         rule  4
	DynVar          rule  5
	Thry            rule  6
	ListDynVar      rules 7, 8
	Item            rules 9, 10, 11, 12, 13, 14, 15, 16, 17
	VarRole         rule  18
	VClass          rules 19, 20, 21
	SBBL            rules 22, 23, 24
	LawType         rules 25, 26, 27
	ListItem        rules 28, 29
	Trm             rules 30, 31
	Trm1            rules 32, 33
	Trm2            rules 34, 35
	Trm3            rules 36, 37, 38
	Trm4            rules 39, 40, 41, 42, 43, 44, 45
	Trm5            rules 46, 47, 48
	Trm6            rules 49, 50, 51
	Trm7            rules 52, 53, 54, 55, 56
	Trm8            rules 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69
	ListTrm         rules 70, 71, 72
	Typ             rules 73, 74
	Typ1            rules 75, 76
	Typ2            rules 77, 78
	Typ3            rules 79, 80, 81, 82
	ListTyp2        rules 83, 84, 85
	ListTyp3        rules 86, 87
	GVar            rules 88, 89
	ListGVar        rules 90, 91, 92
	VrSet           rule  93
	VSCond          rules 94, 95, 96
	ListVSCond      rules 97, 98, 99
	SCond           rules 100, 101, 102, 103

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pThry -> . Thry                              (rule 0)

	'Theory'       shift, and enter state 44

	Thry           goto state 43

State 1

	%start_pTrm -> . Trm                                (rule 1)

	'('            shift, and enter state 31
	'-'            shift, and enter state 32
	'BndL'         shift, and enter state 33
	'BndS'         shift, and enter state 34
	'Close'        shift, and enter state 35
	'False'        shift, and enter state 36
	'Iter'         shift, and enter state 37
	'Sub'          shift, and enter state 38
	'SubL'         shift, and enter state 39
	'SubV'         shift, and enter state 40
	'True'         shift, and enter state 41
	'~'            shift, and enter state 42
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 21
	Trm            goto state 22
	Trm1           goto state 23
	Trm2           goto state 24
	Trm3           goto state 25
	Trm4           goto state 26
	Trm5           goto state 27
	Trm6           goto state 28
	Trm7           goto state 29
	Trm8           goto state 30

State 2

	%start_pTyp -> . Typ                                (rule 2)

	'('            shift, and enter state 16
	'tbot'         shift, and enter state 17
	'ttop'         shift, and enter state 18
	L_DynVar       shift, and enter state 19

	DynVar         goto state 11
	Typ            goto state 12
	Typ1           goto state 13
	Typ2           goto state 14
	Typ3           goto state 15

State 3

	%start_pSCond -> . SCond                            (rule 3)

	'SC'           shift, and enter state 7
	'VSC'          shift, and enter state 8
	'fresh'        shift, and enter state 9
	'none'         shift, and enter state 10

	SCond          goto state 6

State 4

	Integer -> . L_integ                                (rule 4)

	L_integ        shift, and enter state 5


State 5

	Integer -> L_integ .                                (rule 4)

	'!='           reduce using rule 4
	'%'            reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'+'            reduce using rule 4
	'++'           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'.'            reduce using rule 4
	'/'            reduce using rule 4
	'//'           reduce using rule 4
	'/\\'          reduce using rule 4
	':'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'=='           reduce using rule 4
	'==='          reduce using rule 4
	'==>'          reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'[.'           reduce using rule 4
	'\\/'          reduce using rule 4
	%eof           reduce using rule 4


State 6

	%start_pSCond -> SCond .                            (rule 3)

	%eof           accept


State 7

	SCond -> 'SC' . ListVSCond '.' VrSet '.'            (rule 100)

	'.'            reduce using rule 97
	'lst'          shift, and enter state 83
	'std'          shift, and enter state 84

	GVar           goto state 85
	VSCond         goto state 86
	ListVSCond     goto state 88

State 8

	SCond -> 'VSC' . ListVSCond '.'                     (rule 101)

	'.'            reduce using rule 97
	'lst'          shift, and enter state 83
	'std'          shift, and enter state 84

	GVar           goto state 85
	VSCond         goto state 86
	ListVSCond     goto state 87

State 9

	SCond -> 'fresh' . VrSet '.'                        (rule 102)

	'.'            reduce using rule 90
	'lst'          shift, and enter state 83
	'std'          shift, and enter state 84

	GVar           goto state 80
	ListGVar       goto state 81
	VrSet          goto state 82

State 10

	SCond -> 'none' .                                   (rule 103)

	'Conjecture'   reduce using rule 103
	'DclASet'      reduce using rule 103
	'DclDLVar'     reduce using rule 103
	'DclVar'       reduce using rule 103
	'ExprVars'     reduce using rule 103
	'Law'          reduce using rule 103
	'ObsVars'      reduce using rule 103
	'PredVars'     reduce using rule 103
	'StaticVars'   reduce using rule 103
	%eof           reduce using rule 103


State 11

	Typ1 -> DynVar . '(:' ListTyp2 ':)'                 (rule 75)
	Typ2 -> DynVar . ListTyp3                           (rule 77)
	Typ3 -> DynVar .                                    (rule 80)

	'('            shift, and enter state 16
	'(:'           shift, and enter state 79
	')'            reduce using rule 86
			(reduce using rule 80)

	'->'           reduce using rule 86
			(reduce using rule 80)

	'.'            reduce using rule 86
			(reduce using rule 80)

	'tbot'         shift, and enter state 17
	'ttop'         shift, and enter state 18
	L_DynVar       shift, and enter state 19
	%eof           reduce using rule 86
			(reduce using rule 80)


	DynVar         goto state 76
	Typ3           goto state 77
	ListTyp3       goto state 78

State 12

	%start_pTyp -> Typ .                                (rule 2)

	%eof           accept


State 13

	Typ -> Typ1 . '->' Typ                              (rule 73)
	Typ -> Typ1 .                                       (rule 74)

	')'            reduce using rule 74
	'->'           shift, and enter state 75
	'.'            reduce using rule 74
	%eof           reduce using rule 74


State 14

	Typ1 -> Typ2 .                                      (rule 76)

	')'            reduce using rule 76
	'->'           reduce using rule 76
	'.'            reduce using rule 76
	%eof           reduce using rule 76


State 15

	Typ2 -> Typ3 .                                      (rule 78)

	')'            reduce using rule 78
	'->'           reduce using rule 78
	'.'            reduce using rule 78
	':)'           reduce using rule 78
	'|'            reduce using rule 78
	%eof           reduce using rule 78


State 16

	Typ3 -> '(' . Typ ')'                               (rule 82)

	'('            shift, and enter state 16
	'tbot'         shift, and enter state 17
	'ttop'         shift, and enter state 18
	L_DynVar       shift, and enter state 19

	DynVar         goto state 11
	Typ            goto state 74
	Typ1           goto state 13
	Typ2           goto state 14
	Typ3           goto state 15

State 17

	Typ3 -> 'tbot' .                                    (rule 81)

	'('            reduce using rule 81
	')'            reduce using rule 81
	'->'           reduce using rule 81
	'.'            reduce using rule 81
	':)'           reduce using rule 81
	'tbot'         reduce using rule 81
	'ttop'         reduce using rule 81
	'|'            reduce using rule 81
	L_DynVar       reduce using rule 81
	%eof           reduce using rule 81


State 18

	Typ3 -> 'ttop' .                                    (rule 79)

	'('            reduce using rule 79
	')'            reduce using rule 79
	'->'           reduce using rule 79
	'.'            reduce using rule 79
	':)'           reduce using rule 79
	'tbot'         reduce using rule 79
	'ttop'         reduce using rule 79
	'|'            reduce using rule 79
	L_DynVar       reduce using rule 79
	%eof           reduce using rule 79


State 19

	DynVar -> L_DynVar .                                (rule 5)

	'!='           reduce using rule 5
	'%'            reduce using rule 5
	'('            reduce using rule 5
	'(:'           reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'++'           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'->'           reduce using rule 5
	'.'            reduce using rule 5
	'.]'           reduce using rule 5
	'/'            reduce using rule 5
	'//'           reduce using rule 5
	'/\\'          reduce using rule 5
	':'            reduce using rule 5
	':)'           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'=='           reduce using rule 5
	'==='          reduce using rule 5
	'==>'          reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'BndL'         reduce using rule 5
	'BndS'         reduce using rule 5
	'Close'        reduce using rule 5
	'False'        reduce using rule 5
	'Iter'         reduce using rule 5
	'Sub'          reduce using rule 5
	'SubL'         reduce using rule 5
	'SubV'         reduce using rule 5
	'True'         reduce using rule 5
	'['            reduce using rule 5
	'[.'           reduce using rule 5
	'\\/'          reduce using rule 5
	']'            reduce using rule 5
	'covby'        reduce using rule 5
	'dcovby'       reduce using rule 5
	'disj'         reduce using rule 5
	'tbot'         reduce using rule 5
	'ttop'         reduce using rule 5
	'|'            reduce using rule 5
	'~'            reduce using rule 5
	L_integ        reduce using rule 5
	L_DynVar       reduce using rule 5
	%eof           reduce using rule 5


State 20

	Trm8 -> Integer .                                   (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'++'           reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'.'            reduce using rule 57
	'/'            reduce using rule 57
	'//'           reduce using rule 57
	'/\\'          reduce using rule 57
	':'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'==='          reduce using rule 57
	'==>'          reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'[.'           reduce using rule 57
	'\\/'          reduce using rule 57
	%eof           reduce using rule 57


State 21

	Trm8 -> DynVar .                                    (rule 58)
	Trm8 -> DynVar . '(' ListTrm ')'                    (rule 61)
